tests/snapshots/snapshot_fixtures__fixtures__gnu_symbol_pragmas.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/gnu_symbol_pragmas.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn pragma_weak_target(%arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %22 = alloca s32i, "value", align 4
        %23 = alloca s32i, "__retval", align 4
        store %arg1, %22
        %24 = load %22 : s32i, align 4
        %25 = const 7 : s32i
        %26 = add %24, %25 : s32i [nsw]
        store %26, %23
        %27 = load %23 : s32i
        return %27
}
fn pragma_actual(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %16 = alloca s32i, "value", align 4
        %17 = alloca s32i, "__retval", align 4
        store %arg0, %16
        %18 = load %16 : s32i, align 4
        %19 = const 3 : s32i
        %20 = mul %18, %19 : s32i [nsw]
        store %20, %17
        %21 = load %17 : s32i
        return %21
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[10]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 29 : s32i
    %6 = call @pragma_weak_alias(%5) : s32i [all]
    %7 = get_global @pragma_weak_alias : ((s32i) -> s32i)*
    %8 = get_global @pragma_weak_target : ((s32i) -> s32i)*
    %9 = cmp eq %7, %8 : bool
    %10 = cast(bool_to_int) %9 : s32i
    %11 = const 13 : s32i
    %12 = call @pragma_actual(%11) : s32i [all]
    %13 = call @printf(%4, %6, %10, %12) : s32i [all]
    %14 = const 0 : s32i
    store %14, %0
    %15 = load %0 : s32i
    return %15
}
fn pragma_weak_alias(%arg0: s32i) -> s32i [weak, c, dso_local];
