tests/snapshots/snapshot_fixtures__fixtures__goto_forward.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/goto_forward.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    store %3, %1, align 4
    goto done
    ^bb1():
        %4 = const 99 : s32i
        store %4, %1, align 4
        br ^bb2
    ^bb2():
        label done:
        %5 = get_global @printf : ((s8i*, ...) -> s32i)*
        %6 = get_global @.str : s8i[4]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = load %1 : s32i, align 4
        %9 = call @printf(%7, %8) : s32i [all]
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
