tests/snapshots/snapshot_fixtures__fixtures__goto_if_scope.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/goto_if_scope.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "n", align 4
    %2 = alloca s32i, "cls", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 7 : s32i
    store %4, %1, align 4
    scope {
        %14 = load %1 : s32i, align 4
        %15 = const 0 : s32i
        %16 = cmp lt %14, %15 : bool
        if %16 {
            goto neg
        } else {
            goto nonneg
        }
        yield
    }
    br ^bb1
    ^bb1():
        label neg:
        %5 = const -1 : s32i
        store %5, %2, align 4
        goto print
    ^bb2():
        label nonneg:
        %6 = const 1 : s32i
        store %6, %2, align 4
        goto print
    ^bb3():
        label print:
        %7 = get_global @printf : ((s8i*, ...) -> s32i)*
        %8 = get_global @.str : s8i[4]*
        %9 = cast(array_to_ptrdecay) %8 : s8i*
        %10 = load %2 : s32i, align 4
        %11 = call @printf(%9, %10) : s32i [all]
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
