tests/snapshots/snapshot_fixtures__fixtures__goto_nested_if.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/goto_nested_if.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = alloca s32i, "r", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 3 : s32i
    store %5, %1, align 4
    %6 = const -1 : s32i
    store %6, %2, align 4
    scope {
        %17 = load %1 : s32i, align 4
        %18 = const 0 : s32i
        %19 = cmp gt %17, %18 : bool
        if %19 {
            scope {
                %20 = load %2 : s32i, align 4
                %21 = const 0 : s32i
                %22 = cmp gt %20, %21 : bool
                if %22 {
                    goto both_pos
                } else {
                    goto a_pos
                }
                yield
            }
            yield
        } else {
            goto other
        }
        yield
    }
    br ^bb1
    ^bb1():
        label both_pos:
        %7 = const 1 : s32i
        store %7, %3, align 4
        goto done
    ^bb2():
        label a_pos:
        %8 = const 2 : s32i
        store %8, %3, align 4
        goto done
    ^bb3():
        label other:
        %9 = const 3 : s32i
        store %9, %3, align 4
        goto done
    ^bb4():
        label done:
        %10 = get_global @printf : ((s8i*, ...) -> s32i)*
        %11 = get_global @.str : s8i[4]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = load %3 : s32i, align 4
        %14 = call @printf(%12, %13) : s32i [all]
        %15 = const 0 : s32i
        store %15, %0
        %16 = load %0 : s32i
        return %16
}
